--- a/quarieme-projet/src/style/banner.css
+++ b/quarieme-projet/src/style/banner.css
@@ -16,41 +16,66 @@
     color: white;
     font-family: -webkit-body;
 }
-.card-images, .card-image {
-    width: 380px;
-    height: 380px;
-    border-radius: 7px;
-    margin: 15px;
-}
 .cad-image-flex {
+    width: 87%;
+    margin: 17px auto;
     display: flex;
-    justify-content: center;
+    /* flex-direction: column; */
+    justify-content: space-between;
     flex-wrap: wrap;
     background: beige;
-    width: 86%;
-    margin: 76px auto;
     padding: 24px;
     border-radius: 10px;
 }
-.cad-image-flex a{
+.cad-image-flex a {
+    width: 32%;
+    height: 400px;
     text-decoration: none;
 }
 .titre_location {
-    margin: -64px 57px;
+    margin: -110px 57px;
     color: white;
+    font-family: sans-serif;
+    font-size: 16px;
+}
+.card-images {
+    /* width: 38%; */
+    height: 82%;
+    border-radius: 7px;
+    margin: 15px;
+}
+.card-image {
+    width: 96%;
+    height: 100%;
+    border-radius: 7px;
+    margin: 15px;
 }
 
-@media (max-width: 955px) {
 
 
-     .card-images, .card-image {
-        width: 280px;
-        height: 280px;
-        border-radius: 7px;
-        margin: 15px;
+@media (max-width: 900px) {
+
+
+    .cad-image-flex a {
+        width: 50%;
+        height: 300px;
     }
-
 }
+@media (max-width: 450px){ 
+  .cad-image-flex a {
+    width: 100%;
+    height: 300px;
+}
+.texte-banner {
+    font-size: 28px;
+    padding: 1px 35px
+}
+.cad-image-flex {
+    width: 75%;
+    margin: 45px auto;
+}
+}
+/* 
 @media (max-width: 821px) {
     .card-images, .card-image {
        width: 500px;
@@ -78,6 +103,6 @@
     .texte-banner {
         font-size: 20px;
     }
-}
+} */
 
 
